Finish crud + SWAGGER
